example/lib/src/generated/errors/errors_localization_kn.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Kannada (`kn`).
class ErrorsLocalizationKn extends ErrorsLocalization {
  ErrorsLocalizationKn([String locale = 'kn']) : super(locale);

  @override
  String get error => 'An error occurred';

  @override
  String get unexpectedError => 'An unexpected error occurred';

  @override
  String get bugReportSentText => 'ಬಗ್ ವರದಿ ಯಶಸ್ವಿಯಾಗಿ ಕಳುಹಿಸಲಾಗಿದೆ.';
}
